--- a/pom.xml
+++ b/pom.xml
@@ -89,13 +89,13 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>software.amazon.awssdk</groupId>
-      <artifactId>bom</artifactId>
-      <version>2.7.21</version>
-      <type>pom</type>
-      <scope>import</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>software.amazon.awssdk</groupId>-->
+<!--      <artifactId>bom</artifactId>-->
+<!--      <version>2.7.21</version>-->
+<!--      <type>pom</type>-->
+<!--      <scope>import</scope>-->
+<!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ses -->
     <dependency>
